--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "lightning-container": "^1.0.0",
     "react": "^16.8.6",
+    "react-beautiful-dnd": "^11.0.3",
     "react-dom": "^16.8.6",
     "styled-components": "^4.2.0",
     "webpack": "^4.31.0",
