--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lightning-container": "^1.0.0",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^11.0.3",
+    "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
     "styled-components": "^4.2.0",
     "webpack": "^4.31.0",
