--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack --mode development",
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "build": "webpack --config ./webpack.config.prod.js --mode production"
+    "build": "webpack --config ./webpack.config.prod.js --mode production && cp dist/bundle.js ../clarity-scratch-org/force-app/main/default/staticresources/ClarityFormsBuilder && cd .. && cd clarity-scratch-org && sfdx force:source:push && cd .. && cd clarity-forms-force"
   },
   "author": "",
   "license": "ISC",
@@ -16,12 +16,12 @@
     "react-beautiful-dnd": "^11.0.3",
     "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
-    "styled-components": "^4.2.0",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1"
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1",
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
