--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^3.21.2",
     "lightning-container": "^1.0.0",
     "react": "^16.8.6",
     "react-beautiful-dnd": "^11.0.3",
@@ -19,15 +20,21 @@
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1",
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "@svgr/webpack": "^4.3.0",
     "babel-loader": "^8.0.5",
+    "babel-plugin-import": "^1.12.0",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    "less-vars-to-js": "^1.3.0",
+    "css-loader": "^3.1.0",
+    "mini-css-extract-plugin": "^0.8.0",
     "react-hot-loader": "^4.8.4",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
   }
 }
