--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^3.21.2",
     "lightning-container": "^1.0.0",
     "react": "^16.8.6",
+    "moment": "^2.24.0",
     "react-beautiful-dnd": "^11.0.3",
     "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
