--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack --mode development",
     "start": "webpack-dev-server --config ./webpack.config.js --mode development --port 8082",
-    "build": "webpack --config ./webpack.config.prod.js --mode production && cp dist/bundle.js ../clarity-scratch-org/force-app/main/default/staticresources/ClarityFormsBuilder && cd .. && cd clarity-scratch-org && sfdx force:source:push && cd .. && cd clarity-forms-force"
+    "build": "webpack --config ./webpack.config.prod.js --mode production && cp dist/bundle.js ../clarity-scratch-org/force-app/main/default/staticresources/ClarityFormsBuilder && cd .. && cd clarity-scratch-org && sfdx force:source:push && cd .. && cd clarity-builder-native"
   },
   "author": "",
   "license": "ISC",
