--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@salesforce-ux/design-system": "^2.11.6",
     "@salesforce/design-system-react": "^0.10.18",
     "lightning-container": "^1.0.0",
-    "react": "^16.8.6",
     "moment": "^2.24.0",
+    "react": "^16.8.6",
     "react-beautiful-dnd": "^11.0.3",
     "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
@@ -28,11 +28,13 @@
     "@svgr/webpack": "^4.3.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.12.0",
+    "css-loader": "^3.1.0",
+    "eslint": "^8.28.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "less-vars-to-js": "^1.3.0",
-    "css-loader": "^3.1.0",
     "mini-css-extract-plugin": "^0.8.0",
+    "prettier": "2.7.1",
     "react-hot-loader": "^4.8.4",
     "style-loader": "^0.23.1",
     "webpack": "^4.31.0",
