--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clarity-forms-force",
   "version": "1.0.0",
   "description": "Clarity Forms App Exchange Product",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "dev": "webpack --mode development",
     "start": "webpack-dev-server --config ./webpack.config.js --mode development --port 8082",
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@dnd-kit/core": "^6.0.5",
     "@salesforce-ux/design-system": "^2.11.6",
     "@salesforce/design-system-react": "^0.10.18",
     "lightning-container": "^1.0.0",
@@ -37,8 +38,10 @@
     "prettier": "2.7.1",
     "react-hot-loader": "^4.8.4",
     "style-loader": "^0.23.1",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1"
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.4",
+    "webpack": "5.40.0",
+    "webpack-cli": "^5.0.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
