--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.6",
+    "@dnd-kit/sortable": "^7.0.1",
+    "@dnd-kit/utilities": "^3.2.1",
     "@salesforce-ux/design-system": "^2.19.0",
     "@salesforce/design-system-react": "^0.10.50",
     "lightning-container": "^1.0.0",
