--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-images-uploading": "^3.1.7",
     "styled-components": "^5.3.6"
   }
 }
